Added person view

--- a/views/title.jade
+++ b/views/title.jade
@@ -21,7 +21,7 @@ block content
 					!{selectedVideo}
 		table(class='col-md-3')
 			tbody
-				!{youtubeData}
+				!{castData}
 		
 block scripts
 	script(src='/javascripts/public_title.js')
